tests/fsharp/typecheck/sigs/neg117.bsl

neg117.fs(79,18,79,59): ilxgen error FS0041: No overloads match for method 'Transform'. The available overloads are shown below.
neg117.fs(79,18,79,59): ilxgen error FS0041: Possible overload: 'static member Neg177.Superpower.Transformer.Transform :  ^r * Neg177.TargetA.TargetA * Neg177.Superpower.Transformer -> (Neg177.TargetA.TransformerKind ->  ^r) when (Neg177.TargetA.TargetA or  ^r) : (static member Transform :  ^r * Neg177.TargetA.TargetA -> Neg177.TargetA.TransformerKind ->  ^r)'. Type constraint mismatch. The type 
    'Neg177.TargetA.M1 Microsoft.FSharp.Core.[]'    
is not compatible with type
    ''a'    
.
neg117.fs(79,18,79,59): ilxgen error FS0041: Possible overload: 'static member Neg177.Superpower.Transformer.Transform :  ^f * Neg177.TargetB.TargetB * Neg177.Superpower.Transformer -> (Neg177.TargetB.TransformerKind ->  ^f) when (Neg177.TargetB.TargetB or  ^f) : (static member Transform :  ^f * Neg177.TargetB.TargetB -> Neg177.TargetB.TransformerKind ->  ^f)'. Type constraint mismatch. The type 
    'Neg177.TargetA.M1 Microsoft.FSharp.Core.[]'    
is not compatible with type
    ''a'    
.
